# Tetris_Game_Qt_Cplusplus

./: CMakeLists.txt  README.md  Tetris.exe.lnk  Tetris.pro  Tetris.sh  block.cpp  block.h  block_base.cpp  block_base.h  common.h  coordinates.cpp  coordinates.h  dockerfile  drawer.cpp  drawer.h  game_engine.cpp  game_engine.h  game_speed_manager.cpp  game_speed_manager.h  game_window.cpp  game_window.h  game_window.ui  i_block.cpp  i_block.h  iblock.cpp  iblock.h  info_display_manager.cpp  info_display_manager.h  j_block.cpp  j_block.h  jblock.cpp  jblock.h  l_block.cpp  l_block.h  lblock.cpp  lblock.h  log_manager.h  main_window.cpp  main_window.h  main_window.ui  (+35 more)
blocks/: i_block.cpp  i_block.h  j_block.cpp  j_block.h  l_block.cpp  l_block.h  o_block.cpp  o_block.h  s_block.cpp  s_block.h  t_block.cpp  t_block.h  z_block.cpp  z_block.h
inc/: abstract_block.h  block_base.h  block_factory.h  block_movement_manager.h  coefficients.h  common.h  controller.h  coordinates.h  drawer.h  game_engine.h  game_speed_manager.h  game_window.h  info_display_manager.h  model.h  next_rotation_state_generator.h  placed_squares.h  random_generator.h  random_number_generator.h  score_manager.h  square.h  tetris.h
inc/blocks/: i_block.h  j_block.h  l_block.h  o_block.h  s_block.h  t_block.h  z_block.h
inc/view/: game_arena.h  gui_config.h  window.h
src/: abstract_block.cpp  block_base.cpp  block_factory.cpp  block_movement_manager.cpp  coefficients.cpp  controller.cpp  coordinates.cpp  drawer.cpp  game_engine.cpp  game_speed_manager.cpp  game_window.cpp  info_display_manager.cpp  log_manager.cpp  main.cpp  model.cpp  placed_squares.cpp  random_number_generator.cpp  score_manager.cpp  square.cpp  tetris.cpp
src/blocks/: i_block.cpp  j_block.cpp  l_block.cpp  o_block.cpp  s_block.cpp  t_block.cpp  z_block.cpp
src/frontend/: main_window.cpp  main_window.h
src/view/: game_arena.cpp  window.cpp
tests/: CMakeLists.txt
tests/src/: block_test.cpp  main.cpp  placed_squares_test.cpp
ui_forms/: window.ui
